Fix/Add: Fixed invisible status bar by changing statusBarStyle to light(White). Added Menubutton to viewControllers.

--- a/Ford Vehicle Collection/Base.lproj/Main.storyboard
+++ b/Ford Vehicle Collection/Base.lproj/Main.storyboard
@@ -104,14 +104,22 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="ynU-rZ-uL9"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSG-vQ-mZC">
+                                <rect key="frame" x="16" y="44" width="49" height="48"/>
+                                <state key="normal" image="MenuButton"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="adM-ON-ECV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1qD-Rw-RsG"/>
+                            <constraint firstItem="fSG-vQ-mZC" firstAttribute="top" secondItem="adM-ON-ECV" secondAttribute="top" id="2vJ-eZ-TeY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fSG-vQ-mZC" secondAttribute="trailing" constant="310" id="4oD-Bo-SdO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fSG-vQ-mZC" secondAttribute="bottom" constant="637" id="6Qw-gl-8No"/>
                             <constraint firstItem="plM-Dq-PxR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7ME-yd-EBb"/>
                             <constraint firstAttribute="trailing" secondItem="plM-Dq-PxR" secondAttribute="trailing" id="AJw-Gy-7YY"/>
                             <constraint firstItem="adM-ON-ECV" firstAttribute="trailing" secondItem="plM-Dq-PxR" secondAttribute="trailing" id="DdE-y1-piL"/>
                             <constraint firstAttribute="bottomMargin" secondItem="plM-Dq-PxR" secondAttribute="bottom" constant="-84" id="NMA-Ca-15T"/>
+                            <constraint firstItem="fSG-vQ-mZC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Pmm-Hy-Qas"/>
                             <constraint firstItem="plM-Dq-PxR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cL5-eR-YHo"/>
                             <constraint firstItem="adM-ON-ECV" firstAttribute="leading" secondItem="plM-Dq-PxR" secondAttribute="leading" id="mCa-5i-jmI"/>
                             <constraint firstAttribute="bottom" secondItem="adM-ON-ECV" secondAttribute="bottom" constant="20" symbolic="YES" id="ubn-DH-uHt"/>
@@ -217,17 +225,25 @@
                                     <outlet property="delegate" destination="eTb-On-sC8" id="02z-7a-eqz"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ce-yj-S8L">
+                                <rect key="frame" x="16" y="44" width="49" height="48"/>
+                                <state key="normal" image="MenuButton"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="YJN-Xw-0Ez" firstAttribute="trailing" secondItem="C5w-j2-8gC" secondAttribute="trailing" id="9ii-S4-2yp"/>
                             <constraint firstItem="C5w-j2-8gC" firstAttribute="top" secondItem="jgz-X0-psX" secondAttribute="top" id="Biz-Qk-t4D"/>
+                            <constraint firstItem="0Ce-yj-S8L" firstAttribute="top" secondItem="YJN-Xw-0Ez" secondAttribute="top" id="KS0-rW-YLH"/>
                             <constraint firstItem="YJN-Xw-0Ez" firstAttribute="leading" secondItem="C5w-j2-8gC" secondAttribute="leading" id="PeL-gA-hh2"/>
                             <constraint firstAttribute="bottomMargin" secondItem="C5w-j2-8gC" secondAttribute="bottom" constant="-83" id="Q4G-nP-kL3"/>
+                            <constraint firstItem="leG-Hq-bPz" firstAttribute="bottom" secondItem="0Ce-yj-S8L" secondAttribute="bottom" constant="637" id="XGI-ek-EyI"/>
                             <constraint firstItem="YJN-Xw-0Ez" firstAttribute="leading" secondItem="jgz-X0-psX" secondAttribute="leading" id="YGx-9c-eBx"/>
                             <constraint firstAttribute="trailing" secondItem="YJN-Xw-0Ez" secondAttribute="trailing" id="bic-ql-lqe"/>
+                            <constraint firstItem="0Ce-yj-S8L" firstAttribute="leading" secondItem="jgz-X0-psX" secondAttribute="leadingMargin" id="edQ-lr-387"/>
                             <constraint firstAttribute="bottom" secondItem="YJN-Xw-0Ez" secondAttribute="bottom" constant="20" symbolic="YES" id="iF5-Sj-YJG"/>
                             <constraint firstItem="YJN-Xw-0Ez" firstAttribute="top" secondItem="leG-Hq-bPz" secondAttribute="top" id="uRT-lh-eHh"/>
+                            <constraint firstItem="leG-Hq-bPz" firstAttribute="trailing" secondItem="0Ce-yj-S8L" secondAttribute="trailing" constant="310" id="y6s-lf-0D1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="leG-Hq-bPz"/>
                     </view>
@@ -353,16 +369,24 @@
                                     <outlet property="delegate" destination="W2m-q9-yPC" id="Za6-7T-PMZ"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zcc-y9-EFF">
+                                <rect key="frame" x="16" y="44" width="49" height="48"/>
+                                <state key="normal" image="MenuButton"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="1ap-JF-86I" firstAttribute="top" secondItem="lfe-0L-k1Q" secondAttribute="top" id="1M3-8G-wu6"/>
+                            <constraint firstItem="zcc-y9-EFF" firstAttribute="top" secondItem="Zif-vO-alr" secondAttribute="top" id="EcM-p1-fBr"/>
                             <constraint firstItem="Zif-vO-alr" firstAttribute="top" secondItem="cJA-XK-wAY" secondAttribute="top" id="LcP-RR-SoT"/>
+                            <constraint firstItem="cJA-XK-wAY" firstAttribute="bottom" secondItem="zcc-y9-EFF" secondAttribute="bottom" constant="637" id="OZt-nM-hp1"/>
                             <constraint firstItem="Zif-vO-alr" firstAttribute="leading" secondItem="1ap-JF-86I" secondAttribute="leading" id="RTD-VA-VnY"/>
                             <constraint firstAttribute="bottomMargin" secondItem="1ap-JF-86I" secondAttribute="bottom" constant="-83" id="YuO-nE-InL"/>
                             <constraint firstItem="Zif-vO-alr" firstAttribute="leading" secondItem="lfe-0L-k1Q" secondAttribute="leading" id="aIe-jX-jqC"/>
                             <constraint firstItem="Zif-vO-alr" firstAttribute="trailing" secondItem="1ap-JF-86I" secondAttribute="trailing" id="eEs-Jk-C0t"/>
                             <constraint firstAttribute="trailing" secondItem="Zif-vO-alr" secondAttribute="trailing" id="qwO-oK-TXl"/>
+                            <constraint firstItem="cJA-XK-wAY" firstAttribute="trailing" secondItem="zcc-y9-EFF" secondAttribute="trailing" constant="310" id="rXz-6x-uPs"/>
+                            <constraint firstItem="zcc-y9-EFF" firstAttribute="leading" secondItem="lfe-0L-k1Q" secondAttribute="leadingMargin" id="vvO-D2-4ux"/>
                             <constraint firstAttribute="bottom" secondItem="Zif-vO-alr" secondAttribute="bottom" constant="20" symbolic="YES" id="wNM-7e-6Tu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cJA-XK-wAY"/>
@@ -468,15 +492,23 @@
                                     <outlet property="delegate" destination="EIW-eD-6af" id="Hwu-za-Fxa"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yb3-5f-tbY">
+                                <rect key="frame" x="16" y="44" width="49" height="48"/>
+                                <state key="normal" image="MenuButton"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="RPc-EC-rRA" firstAttribute="bottom" secondItem="Yb3-5f-tbY" secondAttribute="bottom" constant="637" id="1Jv-Ga-eKN"/>
+                            <constraint firstItem="Yb3-5f-tbY" firstAttribute="leading" secondItem="t0t-Er-KKJ" secondAttribute="leadingMargin" id="KlN-G6-ljl"/>
                             <constraint firstItem="LXT-QH-Yeu" firstAttribute="leading" secondItem="t0t-Er-KKJ" secondAttribute="leading" id="PmE-iQ-0eE"/>
                             <constraint firstItem="gFc-aH-uqV" firstAttribute="top" secondItem="t0t-Er-KKJ" secondAttribute="top" id="QFh-du-QP7"/>
                             <constraint firstAttribute="bottom" secondItem="LXT-QH-Yeu" secondAttribute="bottom" constant="20" symbolic="YES" id="T4V-HM-Jg2"/>
                             <constraint firstItem="LXT-QH-Yeu" firstAttribute="trailing" secondItem="gFc-aH-uqV" secondAttribute="trailing" id="VrB-u4-gtl"/>
                             <constraint firstAttribute="bottomMargin" secondItem="gFc-aH-uqV" secondAttribute="bottom" constant="-83" id="WDT-9P-Gk4"/>
+                            <constraint firstItem="RPc-EC-rRA" firstAttribute="trailing" secondItem="Yb3-5f-tbY" secondAttribute="trailing" constant="310" id="a9F-5L-DnK"/>
                             <constraint firstAttribute="trailing" secondItem="LXT-QH-Yeu" secondAttribute="trailing" id="guZ-TD-hP2"/>
+                            <constraint firstItem="Yb3-5f-tbY" firstAttribute="top" secondItem="RPc-EC-rRA" secondAttribute="top" id="lFS-9f-En9"/>
                             <constraint firstItem="LXT-QH-Yeu" firstAttribute="leading" secondItem="gFc-aH-uqV" secondAttribute="leading" id="uX2-PX-n7u"/>
                             <constraint firstItem="LXT-QH-Yeu" firstAttribute="top" secondItem="RPc-EC-rRA" secondAttribute="top" id="xSb-oa-KI9"/>
                         </constraints>
@@ -581,17 +613,25 @@
                                     <outlet property="delegate" destination="HNw-tI-ZHV" id="4va-QI-6Yn"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VaR-k2-1kX">
+                                <rect key="frame" x="16" y="44" width="49" height="48"/>
+                                <state key="normal" image="MenuButton"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="TS5-mO-Q88" secondAttribute="trailing" id="1xc-1l-OUY"/>
                             <constraint firstItem="TS5-mO-Q88" firstAttribute="top" secondItem="fHA-Ml-jd8" secondAttribute="top" id="3a3-LS-HcD"/>
+                            <constraint firstItem="VaR-k2-1kX" firstAttribute="leading" secondItem="E5q-MS-W0F" secondAttribute="leadingMargin" id="G3n-ug-8rO"/>
+                            <constraint firstItem="fHA-Ml-jd8" firstAttribute="trailing" secondItem="VaR-k2-1kX" secondAttribute="trailing" constant="310" id="GU6-9g-qLa"/>
+                            <constraint firstItem="fHA-Ml-jd8" firstAttribute="bottom" secondItem="VaR-k2-1kX" secondAttribute="bottom" constant="637" id="NUm-Kw-SEE"/>
                             <constraint firstAttribute="bottomMargin" secondItem="1FN-bf-6nr" secondAttribute="bottom" constant="-83" id="YEA-Nb-4KF"/>
                             <constraint firstItem="TS5-mO-Q88" firstAttribute="leading" secondItem="E5q-MS-W0F" secondAttribute="leading" id="bEM-uX-0DP"/>
                             <constraint firstItem="1FN-bf-6nr" firstAttribute="top" secondItem="E5q-MS-W0F" secondAttribute="top" id="d57-LN-FAk"/>
                             <constraint firstItem="TS5-mO-Q88" firstAttribute="trailing" secondItem="1FN-bf-6nr" secondAttribute="trailing" id="dYO-6k-W5T"/>
                             <constraint firstItem="TS5-mO-Q88" firstAttribute="leading" secondItem="1FN-bf-6nr" secondAttribute="leading" id="feb-aK-C6m"/>
                             <constraint firstAttribute="bottom" secondItem="TS5-mO-Q88" secondAttribute="bottom" constant="20" symbolic="YES" id="l6l-8Y-YAp"/>
+                            <constraint firstItem="VaR-k2-1kX" firstAttribute="top" secondItem="fHA-Ml-jd8" secondAttribute="top" id="pMG-eZ-Yfq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fHA-Ml-jd8"/>
                     </view>
@@ -608,6 +648,7 @@
         <image name="Cars" width="25" height="25"/>
         <image name="EV" width="25" height="25"/>
         <image name="Ford" width="213" height="320"/>
+        <image name="MenuButton" width="166" height="166"/>
         <image name="SUV" width="25" height="25"/>
         <image name="performance" width="25" height="25"/>
         <image name="trucks&amp;Vans" width="25" height="25"/>
